Arreglar procesamiento de donador: categoria case-insensitive, push de mision null y completitud por categoria
- Comparar categoriaInicio con equalsIgnoreCase (DyE devuelve 'Ocasional' vs enum 'OCASIONAL')
- Pushear misionActualID=null a DyE al completar la mision (singletonMap admite null)
- COMPLETITUD cuenta categorias distintas resolviendo productoID via GET /productos/{id}